--- a/style.css
+++ b/style.css
@@ -106,6 +106,13 @@ height: 100%;
     padding: 50px;
     border-radius: 20%;
 }
+body::-webkit-scrollbar{
+    background-color: transparent;
+}
+body::-webkit-scrollbar-thumb{
+    background: linear-gradient(red, blue, green);
+    border-radius: 8px;
+}
 @media (max-width: 500px) {
     #nav {
         width: 100%;
